# snippetvault-mcp

./: LICENSE  README.md  README_TW.md  pyproject.toml  requirements.txt
src/snippetvault_mcp/: __init__.py  server.py
src/snippetvault_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/snippetvault_mcp/models/: __init__.py  snippet.py
src/snippetvault_mcp/storage/: __init__.py  base.py  local.py
src/snippetvault_mcp/tools/: __init__.py  snippets.py  tags.py
src/snippetvault_mcp/utils/: __init__.py  embedding.py  language.py
tests/: __init__.py  test_language.py  test_snippet.py  test_storage.py
